test/files/neg/t7494-before-parser/sample_2.scala
// scalac: -Xplugin:. -Xplugin-require:beforeparser

package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
